--- a/css/landing.css
+++ b/css/landing.css
@@ -6,3 +6,399 @@ header h1 {
     margin: 2em;
     padding: 0em;
 }
+
+
+
+
+
+
+html,body {
+    background-color: #2f4f4f;
+    color: #cad7e4;
+    font-family: 'ViceCitySans', Arial, Helvetica, sans-serif;
+}
+a {
+    color: #d3d3d3;
+    text-decoration: none;
+    font-family: 'Rimouski', Arial, Helvetica, sans-serif;
+}
+a:hover {
+    color: #98ed8a;
+    text-decoration: underline;
+    text-decoration-color: #ff8c00;
+    text-decoration-thickness: 0.1em;
+    text-underline-offset: 0.2em;
+}
+header {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    font-size: 0.95em;
+}
+@media( min-width: 1000px){
+    header {
+        flex-direction: row;
+        font-size: 1.15em;
+    }
+}
+header h1 {
+    display: inline-flex;
+    margin: 0.1em;
+    padding: 0em;
+    font-size: 2em;
+}
+footer {
+    font-size: 0.75em;
+}
+nav a[target="_blank"]:hover {
+    /*color: #ff3bff;*/
+    color: darkorange;
+    text-decoration-color: #98ed8a;
+}
+nav a[target="_blank"]:before,
+nav a[target="_blank"]:after{
+    color: #98ed8a;
+}
+nav {
+    display: flex;
+    flex-direction: row;
+    font-size: 1.25em;
+    flex-wrap: wrap;
+}
+nav a {
+    margin: 0.5em;
+    padding: 0.2em;
+}
+nav a::before,
+nav a::after{
+    display: inline-block;
+    font-size: 0.5em;
+    margin: 0.5em;
+    opacity: 0.5;
+    color: darkorange;
+    transform: translateY(-0.2em);
+}
+nav a:hover:before,
+nav a:hover:after{
+    opacity: 1;
+}
+nav a::before{
+    content: "~{";
+}
+nav a::after{
+    content: "}~";
+}
+.null {
+    white-space: nowrap;
+    color: #98ed8a;
+    text-transform: lowercase;
+}
+
+b.null {
+    font-weight: normal;
+}
+.null::before{
+    content: '';
+    display: inline-block;
+    background-image: url(../images/null\ icon.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 0.75em;
+    height: 0.75em;
+    margin-top: 0.25em;
+    margin-left: 0.25em;
+    margin-right: 0.15em;
+    transform: translateY(0.1em);
+}
+
+section h1 {
+    font-size: 1.75em;
+}
+section h2 {
+    margin-top: 2em;
+    font-size: 1.25em;
+}
+section a {
+    font-size: 1em;
+    font-weight: normal;
+}
+
+
+
+@media( min-width:600px){
+    header {
+        padding: 2vw;
+    }
+    section#about {
+        font-size: 1.25em;
+        columns: 250px;
+        column-gap: 2em;
+    }
+    section h1 {
+        column-span: all;
+    }
+    footer {
+        display: flex;
+        align-content: center;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        padding: 2em;
+        z-index: 100;
+        background-color: rgba(42, 62, 62, 0.75);
+    }
+    .contents{
+        margin-bottom: 20em;
+    }
+    footer nav {
+        width: 100%;
+        align-content: center;
+        align-items: center;
+        flex-direction: row-reverse;
+    }
+    p {
+        margin-top: 0px;
+    }
+    p:first-of-type:first-letter{
+        font-weight: bold;
+        font-size: 2em;
+        float: left;
+        margin-top: 0.1em;
+        margin-right: 0.3em;
+        margin-bottom: 0.2em;
+        color: darkorange;
+    }
+    header .null::before{
+        width: 2em;
+        height: 2em;
+        margin-top: -0.4em;
+        margin-left: -0.4em;
+        margin-right: 0.15em;
+        transform: translateY(0em);
+    }
+    footer {
+        font-size: 1em;
+    }
+}
+@media( min-width:800px){
+    /* GRID LAYOUTS */
+    div.contents {
+        display: grid;
+        grid-template-columns: auto 20em;
+        grid-gap: 0em 5em;
+        grid-template-areas: 
+            "main sidebar-stamp"
+            "main sidebar-a"
+            "main sidebar-b"
+            "main sidebar-c"
+            "main sidebar-d";
+        margin-top: auto;
+        margin-bottom: 10em;
+        max-width: 1300px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #about,#weather {
+        grid-area: main;
+    }
+    #stamp {
+        grid-area: sidebar-stamp;
+    }
+    #info {
+        grid-area: sidebar-a;
+    }
+    #local_plugins,#stats {
+        grid-area: sidebar-b;
+    }
+    #local_extensions {
+        grid-area: sidebar-c;
+    }
+    #settings, #servers {
+        grid-area: sidebar-d;
+    }
+    #about h1{
+        margin-top: 0em;
+    }
+}
+#info, #local_plugins, #local_extensions {
+    display: inline-block;
+    vertical-align: top;
+    min-width: 20em;
+    width: 100%;
+    max-width: 40em;
+}
+section h1, section h2 {
+    color: #98ed8a;
+}
+#info h1, #local_plugins h1, #local_extensions h1, #settings h1, #stats h1 {
+    color: lightyellow;
+    font-size: 1.3em;
+    background-color: #98ed8a66;
+    margin: 0px;
+    padding: 0.2em;
+    text-shadow: black 0.1em 0.1em 0.1em;
+}
+section ul {
+    padding: 0em;
+    margin: 0.1em;
+    margin-left: auto;
+    margin-right: auto;
+    list-style: none;
+    max-width: 20em;
+}
+section li {
+    padding: 0.2em;
+}
+section li:nth-child(odd){
+    background-color: rgba(14, 65, 65, 0.322);
+}
+#info li .value::after, #settings li .value::after, #stats li .value::after{
+    color: whitesmoke;
+    font-size: 0.75em;
+    margin-left: 0.5em;
+}
+#info li .key, #settings li .key, #stats li .key {
+    display: inline-block;
+    width: 7em;
+}
+#info li .value, #settings li .value, #stats li .value {
+    display: inline-block;
+    color: darkorange;
+}
+#info li a[target="_blank"]:hover{
+    color: whitesmoke;
+    
+}
+#info li a:hover, #settings li a:hover, #stats li a:hover{
+    color: #98ed8a;
+    
+}
+section a:hover {
+    color: #98ed8a;
+    text-decoration-color: darkorange;
+}
+section a[target="_blank"]:hover {
+    color: darkorange;
+    text-decoration-color: #98ed8a;
+}
+.bool[val="0"]::before{
+    content: "false";
+}
+.bool[val="1"]::before{
+    content: "true";
+}
+
+#local_plugins li,
+#local_extensions li {
+    display: flex;
+    flex-direction: row;
+}
+#local_plugins li [var="name"],
+#local_extensions li [var="name"] {
+    flex-grow: 2;
+}
+li [var="hash"],
+li [var="mac_address"],
+#local_plugins li [var="hash"],
+#local_extensions li [var="hash"] {
+    font-style: italic;
+    font-size: 0.65em;
+    margin: 0.2em;
+    margin-right: 1em;
+}
+li [var="hash"]{
+    color: lightseagreen !important;
+}
+li [var="hash"]::before,
+li [var="hash"]::after,
+#local_plugins li [var="hash"]::before,
+#local_plugins li [var="hash"]::after,
+#local_extensions li [var="hash"]::before,
+#local_extensions li [var="hash"]::after{
+    color: #98ed8a;
+    opacity: 0.5;
+    margin: 0.1em;
+}
+li [var="hash"]::before,
+#local_plugins li [var="hash"]::before,
+#local_extensions li [var="hash"]::before{
+    content: "{";
+}
+li [var="hash"]::after,
+#local_plugins li [var="hash"]::after,
+#local_extensions li [var="hash"]::after{
+    content: "}";
+}
+
+#local_plugins li [var="modified"],
+#local_extensions li [var="modified"] {
+    font-style: italic;
+    font-size: 0.85em;
+    color: darkorange;
+    margin: 0.2em;
+    margin-right: 1em;
+}
+
+
+
+.wemo_name {
+    display: inline-block;
+    white-space: nowrap;
+    font-size: 0.80em;
+    padding: 0.1em;
+    background-color: rgba(105, 105, 105, 0.5);
+    color: lightgray;
+    transform: translateY(-0.05em);
+}
+.wemo_name .room_name,
+.wemo_name .wemo_type {
+    font-style: italic;
+}
+.wemo_name .room_name::before,
+.wemo_name .wemo_type::before {
+    content: "[";
+    color: grey;
+}
+.wemo_name .room_name::after,
+.wemo_name .wemo_type::after {
+    content: "]";
+    color: grey;
+}
+.wemo_name .wemo_type .light_type::before {
+    content: "/";
+    color: grey;
+}
+.wemo_name .wemo_type .light_type:first-child::before {
+    content: none;
+}
+.wemo_name .room_name {
+    color: lightpink;
+}
+.wemo_name .wemo_type .light_type:nth-child(odd){
+    color:lightskyblue;
+}
+.wemo_name .wemo_type .light_type:nth-child(even){
+    color:lightgreen;
+}
+.hub {
+    color: #8ad5ed;
+}
+.hub::before {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-image: url(../images/isle.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    transform: translate(-0.2em,0.2em);
+}
+.loading h1 {
+    background-image: url(../images/loading.gif);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center right;
+}
